--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -11,13 +11,17 @@
   font-family: kato;
   src: url("./fonts/kato.ttf");
 }
-.v1{
- //v1 needs variables
- --v1-main-bg:black;
-  --footer-height: 35vh;
-  --header-height:15%;
+@font-face {
+  font-family: billy hunter;
+  src: url("./fonts/billyhunter.otf");
 }
-.v2{
+.v1 {
+  //v1 needs variables
+  --v1-main-bg: black;
+  --footer-height: 35vh;
+  --header-height: 15%;
+}
+.v2 {
   //v2 variables
   --main-bg: rgb(3, 1, 1);
   --font-poppins: "Poppins", sans-serif;
@@ -28,10 +32,10 @@
   --font-color-main: white;
   --font-hirosh: "hirosh";
   --font-kato: "kato";
-  --header-height:8.5vh;
+  --header-height: 8.5vh;
   --footer-height: 20vh;
 }
-.v3{
+.v3 {
   //v3 variables
   --accent-color: #150734;
   --primary-color: #de2bfc;
@@ -40,7 +44,6 @@
   // --secondary-color-rgb: rgb(0, 219, 222);
   --font-sans-serif-1: "Poppins", sans-serif;
   --font-sans-serif-2: "Orbitron", sans-serif;
-  --header-height:10vh;
-  --footer-height:22vh;
- 
+  --header-height: 10vh;
+  --footer-height: 22vh;
 }
