--- a/styles/components/v2/_footer.scss
+++ b/styles/components/v2/_footer.scss
@@ -1,8 +1,8 @@
 #footer {
-  background-color: var(--main-bg);
+  background-color: var(--v2-main-bg);
   bottom: 0;
   width: 100%;
-  height: var(--footer-height);
+  height: var(--v2-footer-height);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -12,7 +12,7 @@
     width: calc(100% / 4);
   }
   .logo-container {
-    height: 100%;
+    height: 12vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,11 +44,12 @@
     grid-template-columns: repeat(2, 1fr);
     justify-items: center;
     align-items: center;
+    row-gap: 2vh;
     a {
       text-decoration: none;
       color: white;
-      font-size: 0.8rem;
-      font-family: var(--font-hirosh);
+      font-size: 1rem;
+      font-family: var(--v2-font-hirosh);
     }
   }
   .about {
@@ -69,7 +70,7 @@
       color: white;
       text-align: right;
       padding: 0px 10px;
-      font-family: var(--font-poppins);
+      font-family: var(--v2-font-poppins);
       font-size: 0.8rem;
     }
   }
@@ -77,20 +78,26 @@
 @media only screen and (max-width: 900px) {
   #footer {
     overflow: hidden;
-    height: auto;
-    padding: 5px 20px;
+    padding: 2vh 5vw;
+    width: 100%;
+    display: flex;
     flex-direction: column;
+    height: 55vh;
     & > div {
       width: 100%;
     }
     .logo-container {
-      height: 100px;
+      height: 25%;
+      // width: 30vh;
+      img {
+        object-fit: cover;
+      }
     }
     .socials {
-      height: 100%;
-      padding: 0px 80px;
-      margin: 15px 5px;
-      row-gap: 15px;
+      padding: 0px 8vw;
+      margin: 3vh 2vw;
+      row-gap: 2vh;
+      height: 25%;
       a {
         font-size: 1.3rem;
         display: flex;
@@ -99,23 +106,28 @@
       }
     }
     .navbar {
-      gap: 5px;
-      margin: 15px 5px;
+      gap: 1vw;
+      margin: 2vh 1vw;
+      row-gap: 2vh;
+      height: 25%;
       a {
         font-size: 1.1rem;
       }
     }
     .about {
-      padding: 8px 0px;
+      margin: 2vh 1vw;
+      row-gap: 1vh;
+      height: 25%;
       .img-container {
-        height: 50px;
-        width: 80px;
+        height: 10vh;
+        width: 18vw;
         img {
           object-fit: contain;
         }
       }
       span {
-        padding: 0px 60px;
+        height: auto;
+        padding: 0px 3vw;
         font-size: 0.8rem;
         text-align: center;
       }
