--- a/styles/pages/v1/_about.scss
+++ b/styles/pages/v1/_about.scss
@@ -7,21 +7,21 @@
     align-items: center;
     padding-left: 25%;
     padding-right: 25%;
-    margin-bottom: 15vh;
+    margin-bottom: 10vh;
     height: 80vh;
   }
   P {
     text-align: justify;
   }
-  .intro button:hover path {
-    color: black;
-  }
-  .intro button {
-    width: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  // .intro button:hover path {
+  //   color: black;
+  // }
+  // .intro button {
+  //   width: auto;
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+  // }
   .text-and-anis .card {
     width: 100%;
     display: flex;
@@ -75,15 +75,21 @@
     .intro {
       padding-left: 10%;
       padding-right: 10%;
+      margin-bottom: 5vh;
+    }
+    h2 {
+      font-size: 2rem;
     }
     .intro h1 {
       font-size: 2.7rem;
     }
     .intro p {
       font-size: medium;
+      text-align: center;
     }
     .text-and-anis p {
       font-size: medium;
+      text-align: center;
     }
     .text-and-anis .card {
       width: 100%;
