--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -11,15 +11,16 @@
   font-family: kato;
   src: url("./fonts/kato.ttf");
 }
-@font-face {
-  font-family: billy hunter;
-  src: url("./fonts/billyhunter.otf");
-}
+
 .v1 {
   //v1 needs variables
   --v1-main-bg: black;
   --footer-height: 35vh;
-  --header-height: 15%;
+  --header-height: 15vh;
+  @media only screen and (max-width: 900px) {
+    --header-height: 8vh;
+    --footer-height: 40vh;
+  }
 }
 .v2 {
   //v2 variables
