--- a/styles/components/v1/_footer.scss
+++ b/styles/components/v1/_footer.scss
@@ -89,7 +89,7 @@
 }
 @media only screen and (max-width: 900px) {
   #footer {
-    height: 40vh;
+    // height: 40vh;
     overflow: hidden;
     display: flex;
     flex-direction: column;
