--- a/styles/components/v2/_header.scss
+++ b/styles/components/v2/_header.scss
@@ -10,8 +10,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 50px;
-    height: var(--header-height
-);
+    height: var(--header-height);
     width: 92%;
     margin: auto;
     #navbar {
@@ -92,8 +91,7 @@
           height: 210px;
           right: 0px;
           transition: all 0.4s ease-in-out;
-          top: var(--header-height
-);
+          top: var(--header-height);
           a {
             font-size: 0.5rem;
           }
