--- a/styles/pages/v1/_event.scss
+++ b/styles/pages/v1/_event.scss
@@ -1,84 +1,172 @@
-#events {
-  padding-left: 5%;
-  padding-right: 5%;
-  a {
-    cursor: none;
-  }
-  h1 {
-    margin-top: 30px;
-    margin-bottom: 30px;
-  }
+#event {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   .imgContainer {
-    height: calc(100% - 2rem);
-    width: 100%;
     position: relative;
-    border-radius: 20px;
+    height: 17vw;
+    width: 17vw;
+    border-radius: 50%;
     overflow: hidden;
-    span {
-      transition: all 0.3s ease-in-out;
+    margin-bottom: 25px;
+  }
+  a {
+    display: unset;
+    font-weight: 500;
+    color: rgb(179, 0, 255);
+    text-shadow: rgb(0, 0, 0) 0 0 1px;
+  }
+  & > h1 {
+    font-size: 4rem;
+    text-align: center;
+    margin-bottom: 25px;
+  }
+  & > p {
+    width: 80%;
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 25px;
+  }
+  .date {
+    font-size: x-large;
+  }
+  .event-content {
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(240, 248, 255, 0.85);
+    width: 90%;
+    padding: 6%;
+    border-radius: 20px;
+    cursor: default;
+    h1,
+    h2,
+    h3,
+    p,
+    em,
+    strong,
+    u,
+    li,
+    code {
+      color: black;
+    }
+    h1,
+    h2,
+    h3,
+    blockquote,
+    p {
+      margin-bottom: 20px;
+    }
+    strong,
+    em,
+    u,
+    li,
+    code {
+      font-size: inherit !important;
+    }
+    h1 {
+      font-size: 2.3rem;
+      font-weight: 700;
+    }
+    strong {
+      font-weight: 600;
+    }
+    h2 {
+      font-size: 1.8rem;
+      font-weight: 600;
+      margin-left: 10px;
+    }
+    h3 {
+      margin-left: 20px;
+      font-size: 1.5rem;
+      font-weight: 600;
+    }
+    p {
+      font-size: 1.5rem;
+      margin-left: 20px;
+    }
+    li {
+      margin-left: 20px;
+    }
+    blockquote {
+      margin: 0%;
+      font-style: italic;
+    }
+    code {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      text-align: center;
+    }
+    p,
+    em,
+    strong {
+      font-size: 1.2rem;
+      line-height: 2rem;
+    }
+    img {
+      border-radius: 15px;
+    }
+    img[alt~="small-width"] {
+      width: 40%;
+    }
+    img[alt~="medium-width"] {
+      width: 50%;
+    }
+    img[alt~="big-width"] {
+      width: 65%;
+    }
+    img[alt~="x-small-width"] {
+      width: 25%;
     }
   }
-  .imgContainer:hover span {
-    transform: scale(1.1);
-    transform-origin: 50% 50%;
-  }
-  .col {
-    height: 21vw;
-    width: 20vw;
-    position: relative;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-right: 2%;
-  }
-  h2 {
-    font-size: 1.3rem;
-    margin-top: 15px;
-    cursor: pointer;
-  }
-  .title {
-    width: fit-content !important;
-    margin-left: 05%;
+}
+@media screen and (max-width: 900px) {
+  #event {
+    & > h1 {
+      font-size: 2.2rem;
+      margin-bottom: 15px;
+    }
+    & > p {
+      font-size: medium;
+    }
+    .imgContainer {
+      height: 170px;
+      width: 170px;
+    }
+    .date {
+      font-size: medium;
+    }
+    .event-content {
+      padding-top: 5%;
+      padding-left: 3%;
+      padding-right: 3%;
+      padding-bottom: 2%;
+      h1 {
+        line-height: 0;
+      }
+      p,
+      em,
+      strong {
+        font-size: medium;
+        line-height: 2rem;
+      }
+      img {
+        margin-top: 15px;
+      }
+      img[alt~="small-width"] {
+        width: 50%;
+      }
+      img[alt~="medium-width"] {
+        width: 60%;
+      }
+      img[alt~="big-width"] {
+        width: 80%;
+      }
+      img[alt~="x-small-width"] {
+        width: 50%;
+      }
+    }
   }
 }
-// #event {
-//   //   background-color: brown;
-//   padding: 0 5vw;
-//   h2 {
-//     font-weight: 400;
-//     font-size: 3rem;
-//     letter-spacing: 1px;
-//     margin-bottom: 4vh;
-//   }
-//   .all-event-container {
-//     width: 100%;
-//     // background-color: yellow;
-//     min-height: 50%;
-//     .event-cards {
-//       //   background-color: red;
-//       display: grid;
-//       grid-template-columns: repeat(4, 1fr);
-//       gap: 3.5vw;
-//       .event-card-container {
-//         display: flex;
-//         flex-direction: column;
-//         align-self: center;
-//         justify-self: center;
-//         width: 100%;
-//         .img-container {
-//           height: auto;
-//           width: 100%;
-//           aspect-ratio: 1;
-//           border-radius: 25px;
-//           margin-bottom: 10px;
-//         }
-//         &:hover {
-//           .img-container {
-//             img {
-//               transform: scale(1.1);
-//             }
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
