changes from low level people

--- a/styles/pages/v1/_event.scss
+++ b/styles/pages/v1/_event.scss
@@ -11,6 +11,9 @@
     border-radius: 50%;
     overflow: hidden;
     margin-bottom: 25px;
+    img {
+      object-fit: cover;
+    }
   }
   a {
     display: unset;
