--- a/styles/pages/v1/_events.scss
+++ b/styles/pages/v1/_events.scss
@@ -1,17 +1,16 @@
 #all-events {
   height: auto;
   width: 100vw;
-  min-height: calc(
-    100vh - var(--footer-height, 10vh) - var(--header-height, 10vh)
-  );
+  min-height: calc(100vh - var(--footer-height, 10vh) - var(--header-height, 10vh));
   display: flex;
   flex-direction: column;
   padding: 0 5vw;
   .all-event-container {
     width: 100%;
     h2 {
+      font-family: "Syne Tactile", cursive;
       font-weight: 400;
-      font-size: 3rem;
+      font-size: 4rem;
       letter-spacing: 1px;
       margin-bottom: 4vh;
     }
@@ -20,25 +19,38 @@
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       width: 100%;
-      gap: 1vw;
+      gap: 5vw;
+      row-gap: 3rem;
+      margin-bottom: 5rem;
       .event-card-container {
-        width: 100%;
-        height: 50vh;
         cursor: pointer;
+        width: 100%;
+        aspect-ratio: 1.75;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        &:hover {
+          .img-container {
+            cursor: pointer;
+            img {
+              cursor: pointer;
+              transform: scale(1.1);
+            }
+          }
+        }
         .img-container {
-          height: 80%;
-          width: 55%;
+          height: auto;
+          width: 100%;
+          aspect-ratio: 1;
           border-radius: 20px;
           overflow: hidden;
         }
         h3 {
+          padding-top: 1rem;
           width: 90%;
+          height: fit-content;
           text-align: center;
-          margin: 10px 0;
         }
       }
     }
@@ -46,7 +58,7 @@
   .past {
     min-height: 50%;
   }
-  @media only screen and (max-width: 1200px) {
+  @media only screen and (max-width: 900px) {
     .all-event-container {
       h2 {
         font-size: 2rem;
@@ -54,20 +66,6 @@
       }
       .event-cards {
         grid-template-columns: repeat(2, 1fr);
-        .event-card-container {
-          height: 30vh;
-          .img-container {
-            height: 90%;
-            width: 75%;
-            border-radius: 20px;
-            overflow: hidden;
-          }
-          h3 {
-            width: 90%;
-            text-align: center;
-            margin: 0.5vh 0;
-          }
-        }
       }
     }
   }
