--- a/styles/components/v2/_header.scss
+++ b/styles/components/v2/_header.scss
@@ -87,13 +87,13 @@
           background-color: rgba(0, 0, 0, 0.7);
           border: 1px solid white;
           backdrop-filter: blur(175px);
-          width: 80px;
-          height: 210px;
+          width: 40vw;
+          height: 50vh;
           right: 0px;
           transition: all 0.4s ease-in-out;
           top: var(--header-height);
           a {
-            font-size: 0.5rem;
+            font-size: 0.9rem;
           }
         }
         &.inactive {
