--- a/styles/pages/v1/_events.scss
+++ b/styles/pages/v1/_events.scss
@@ -1,7 +1,9 @@
 #all-events {
   height: auto;
   width: 100vw;
-  min-height: calc(100vh - var(--footer-height, 10vh) - var(--header-height, 10vh));
+  min-height: calc(
+    100vh - var(--footer-height, 10vh) - var(--header-height, 10vh)
+  );
   display: flex;
   flex-direction: column;
   padding: 0 5vw;
@@ -70,267 +72,3 @@
     }
   }
 }
-// #events {
-//   padding-left: 5%;
-//   padding-right: 5%;
-// }
-// #events a {
-//   cursor: none;
-// }
-// #events h1 {
-//   margin-top: 30px;
-//   margin-bottom: 30px;
-// }
-// #events .imgContainer {
-//   height: calc(100% - 2rem);
-//   width: 100%;
-//   position: relative;
-//   border-radius: 20px;
-//   overflow: hidden;
-// }
-// #events .imgContainer span {
-//   transition: all 0.3s ease-in-out;
-// }
-// #events .imgContainer:hover span {
-//   transform: scale(1.1);
-//   transform-origin: 50% 50%;
-// }
-// #events .col {
-//   height: 21vw;
-//   width: 20vw;
-//   position: relative;
-//   margin-top: 20px;
-//   margin-bottom: 20px;
-//   margin-right: 2%;
-// }
-// #events h2 {
-//   font-size: 1.3rem;
-//   margin-top: 15px;
-//   cursor: pointer;
-// }
-// #events .title {
-//   width: fit-content !important;
-//   margin-left: 05%;
-// }
-
-// @media screen and (max-width: 900px) {
-//   #events {
-//     padding-left: 5%;
-//     padding-right: 5%;
-//   }
-//   #events .imgContainer {
-//     height: calc(100% - 2rem);
-//     width: 100%;
-//     position: relative;
-//     border-radius: 20px;
-//     overflow: hidden;
-//   }
-//   #events .imgContainer:hover span {
-//     transform: none;
-//   }
-//   #events .col {
-//     height: 55vw;
-//     width: 45vw;
-//     position: relative;
-//     margin-top: 20px;
-//     margin-bottom: 20px;
-//     margin-right: 1%;
-//   }
-//   #events h2 {
-//     font-size: medium;
-//     margin-top: 15px;
-//     cursor: pointer;
-//   }
-//   #events .title {
-//     width: 40vw !important;
-//     margin-left: 05%;
-//   }
-// }
-
-// /* end of all events */
-
-// #event {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
-//   width: 100%;
-// }
-
-// #event .imgContainer {
-//   position: relative;
-//   height: 17vw;
-//   width: 17vw;
-//   border-radius: 50%;
-//   overflow: hidden;
-//   margin-bottom: 25px;
-// }
-
-// #event a {
-//   display: unset;
-//   font-weight: 500;
-//   color: rgb(179, 0, 255);
-//   text-shadow: rgb(0, 0, 0) 0 0 1px;
-// }
-
-// #event > h1 {
-//   font-size: 4rem;
-//   text-align: center;
-//   margin-bottom: 25px;
-// }
-
-// #event > p {
-//   width: 80%;
-//   font-size: 2rem;
-//   text-align: center;
-//   margin-bottom: 25px;
-// }
-
-// #event .date {
-//   font-size: x-large;
-// }
-
-// #event .event-content {
-//   display: flex;
-//   flex-direction: column;
-//   background-color: rgba(240, 248, 255, 0.85);
-//   width: 90%;
-//   padding: 6%;
-//   border-radius: 20px;
-//   cursor: default;
-// }
-// #event .event-content h1,
-// #event .event-content h2,
-// #event .event-content h3,
-// #event .event-content p,
-// #event .event-content em,
-// #event .event-content strong,
-// #event .event-content u,
-// #event .event-content li,
-// #event .event-content code {
-//   color: black;
-// }
-// #event .event-content h1,
-// #event .event-content h2,
-// #event .event-content h3,
-// #event .event-content blockquote,
-// #event .event-content p {
-//   margin-bottom: 20px;
-// }
-// #event .event-content strong,
-// #event .event-content em,
-// #event .event-content u,
-// #event .event-content li,
-// #event .event-content code {
-//   font-size: inherit !important;
-// }
-// #event .event-content h1 {
-//   font-size: 2.3rem;
-//   font-weight: 700;
-// }
-// #event .event-content strong {
-//   font-weight: 600;
-// }
-// #event .event-content h2 {
-//   font-size: 1.8rem;
-//   font-weight: 600;
-//   margin-left: 10px;
-// }
-// #event .event-content h3 {
-//   margin-left: 20px;
-//   font-size: 1.5rem;
-//   font-weight: 600;
-// }
-// #event .event-content p {
-//   font-size: 1.5rem;
-//   margin-left: 20px;
-// }
-// #event .event-content li {
-//   margin-left: 20px;
-// }
-// #event .event-content blockquote {
-//   margin: 0%;
-//   font-style: italic;
-// }
-// #event .event-content code {
-//   width: 100%;
-//   display: flex;
-//   justify-content: center;
-//   text-align: center;
-// }
-
-// #event .event-content p,
-// #event .event-content em,
-// #event .event-content strong {
-//   font-size: 1.2rem;
-//   line-height: 2rem;
-// }
-
-// #event .event-content img {
-//   border-radius: 15px;
-// }
-
-// #event .event-content img[alt~="small-width"] {
-//   width: 40%;
-// }
-
-// #event .event-content img[alt~="medium-width"] {
-//   width: 50%;
-// }
-
-// #event .event-content img[alt~="big-width"] {
-//   width: 65%;
-// }
-
-// #event .event-content img[alt~="x-small-width"] {
-//   width: 25%;
-// }
-
-// @media screen and (max-width: 900px) {
-//   #event > h1 {
-//     font-size: 2.2rem;
-//     margin-bottom: 15px;
-//   }
-//   #event > p {
-//     font-size: medium;
-//   }
-//   #event .imgContainer {
-//     height: 170px;
-//     width: 170px;
-//   }
-//   #event .date {
-//     font-size: medium;
-//   }
-//   #event .event-content {
-//     padding-top: 5%;
-//     padding-left: 3%;
-//     padding-right: 3%;
-//     padding-bottom: 2%;
-//   }
-//   #event .event-content h1 {
-//     line-height: 0;
-//   }
-//   #event .event-content p,
-//   #event .event-content em,
-//   #event .event-content strong {
-//     font-size: medium;
-//     line-height: 2rem;
-//   }
-//   #event .event-content img {
-//     margin-top: 15px;
-//   }
-//   #event .event-content img[alt~="small-width"] {
-//     width: 50%;
-//   }
-//   #event .event-content img[alt~="medium-width"] {
-//     width: 60%;
-//   }
-//   #event .event-content img[alt~="big-width"] {
-//     width: 80%;
-//   }
-//   #event .event-content img[alt~="x-small-width"] {
-//     width: 50%;
-//   }
-// }
-
-// /* hello */
