--- a/styles/pages/v2/_event.scss
+++ b/styles/pages/v2/_event.scss
@@ -30,8 +30,7 @@
         linear-gradient(to right, var(--color1), var(--color3)) border-box;
       border-radius: 30px;
       border: 3px solid transparent;
-      box-shadow: 0px 0px 2px 2px var(--color1),
-        0px 0px 1px 1px var(--color3);
+      box-shadow: 0px 0px 2px 2px var(--color1), 0px 0px 1px 1px var(--color3);
       & > h2 {
         height: 100%;
         width: 100%;
@@ -55,8 +54,7 @@
         linear-gradient(to right, var(--color2), var(--color4)) border-box;
       border-radius: 30px;
       border: 3px solid transparent;
-      box-shadow: 0px 0px 2px 2px var(--color2),
-        0px 0px 1px 1px var(--color4);
+      box-shadow: 0px 0px 2px 2px var(--color2), 0px 0px 1px 1px var(--color4);
     }
     .date-container {
       display: flex;
@@ -71,8 +69,7 @@
         linear-gradient(to right, var(--color1), var(--color3)) border-box;
       border-radius: 30px;
       border: 3px solid transparent;
-      box-shadow: 0px 0px 2px 2px var(--color1),
-        0px 0px 1px 1px var(--color3);
+      box-shadow: 0px 0px 2px 2px var(--color1), 0px 0px 1px 1px var(--color3);
       & > span {
         background: -webkit-linear-gradient(var(--color1), var(--color3));
         background-clip: text;
@@ -95,8 +92,7 @@
       linear-gradient(to right, var(--color2), var(--color4)) border-box;
     border-radius: 30px;
     border: 3px solid transparent;
-    box-shadow: 0px 0px 2px 2px var(--color2),
-      0px 0px 1px 1px var(--color4);
+    box-shadow: 0px 0px 2px 2px var(--color2), 0px 0px 1px 1px var(--color4);
 
     .description {
       width: 95%;
@@ -138,6 +134,33 @@
         font-size: 1.3rem;
         margin: 1% 1%;
       }
+      img {
+        &[data-size*="x-small"] {
+          width: 30%;
+          height: fit-content;
+          object-fit: contain;
+        }
+        &[data-size*="small"] {
+          width: 47.5%;
+          height: fit-content;
+          object-fit: contain;
+        }
+        &[data-size*="medium"] {
+          width: 65%;
+          height: fit-content;
+          object-fit: contain;
+        }
+        &[data-size*="large"] {
+          width: 82.5%;
+          height: fit-content;
+          object-fit: contain;
+        }
+        &[data-size*="x-large"] {
+          width: 100%;
+          height: fit-content;
+          object-fit: contain;
+        }
+      }
     }
     .regis-button {
       width: 15%;
@@ -149,8 +172,7 @@
         linear-gradient(to right, var(--color1), var(--color3)) border-box;
       border-radius: 30px;
       border: 3px solid transparent;
-      box-shadow: 0px 0px 2px 2px var(--color1),
-        0px 0px 1px 1px var(--color3);
+      box-shadow: 0px 0px 2px 2px var(--color1), 0px 0px 1px 1px var(--color3);
       text-decoration: none;
       color: var(--font-color-main);
       font-size: 1.2rem;
@@ -216,7 +238,6 @@
         }
         > p {
           font-size: 0.9rem;
-          
         }
         b {
           font-weight: 700;
