--- a/styles/pages/v2/_home.scss
+++ b/styles/pages/v2/_home.scss
@@ -40,6 +40,7 @@
     row-gap: 30px;
     grid-template-columns: repeat(2, 50%);
     width: 100%;
+    min-height: 100vh;
     height: auto;
     padding: 50px 6vw;
     text-align: justify;
@@ -47,6 +48,7 @@
     color: white;
     justify-content: center;
     align-items: center;
+
     &::before {
       content: "";
       position: absolute;
@@ -74,13 +76,13 @@
 
     div {
       width: 100%;
-      height: 50vh;
       display: flex;
       flex-direction: column;
       padding: 30px 0px;
       padding-right: 20px;
       font-family: var(--font-poppins);
-
+      justify-content: flex-start;
+      min-height: 60vh;
       h3 {
         font-family: var(--font-kato);
         font-size: 2.5rem;
@@ -107,14 +109,13 @@
       ul {
         margin-left: 30px;
       }
-      &:nth-child(1),
-      &:nth-child(2) {
-        height: 55vh;
-      }
+      // &:nth-child(1),
+      // &:nth-child(2) {
+      //   // height: 55vh;
+      // }
       &.mission {
         justify-content: flex-end;
         align-items: flex-start;
-
         h3 {
           color: rgb(254, 196, 70);
           align-self: flex-start;
@@ -127,6 +128,7 @@
       &.about {
         justify-content: flex-start;
         align-items: flex-start;
+
         h3 {
           color: rgb(42, 205, 210);
         }
@@ -135,6 +137,7 @@
         justify-content: flex-end;
         align-items: flex-start;
         padding-left: 20px;
+
         h3 {
           color: rgb(234, 93, 172);
         }
@@ -153,6 +156,7 @@
         justify-content: flex-start;
         align-items: flex-start;
         padding-left: 20px;
+
         counter-reset: list-counter;
         h3 {
           color: rgb(114, 113, 240);
@@ -171,6 +175,7 @@
     }
   }
 }
+
 @media only screen and (max-width: 900px) {
   #Home {
     overflow: hidden;
@@ -212,7 +217,7 @@
       // background-color: var(--main-bg);
       div {
         width: 100%;
-        height: fit-content;
+        min-height: fit-content;
         display: flex;
         flex-direction: column;
         padding: 3px 0px;
