--- a/styles/style.scss
+++ b/styles/style.scss
@@ -90,7 +90,7 @@
   @import "./pages/v3/home";
   @import "./pages/v3/events";
   @import "./pages/v3/about";
-  @import "./pages/v3/members";
+  @import "./pages/v3/team";
   @import "./pages/v3/event";
 
   @import "./components/v3/header";
