--- a/styles/pages/v3/_team.scss
+++ b/styles/pages/v3/_team.scss
@@ -77,8 +77,7 @@
                 background-color: var(--secondary-color);
               }
               box-shadow: 0 0 15px var(--primary-color),
-                0 0 15px var(--primary-color),
-                0 0 15px var(--primary-color);
+                0 0 15px var(--primary-color), 0 0 15px var(--primary-color);
             }
           }
           .img-container {
@@ -86,18 +85,12 @@
               border: 1px solid var(--primary-color);
             }
             &::after {
-              box-shadow: 0 0 50px var(--primary-color),
-                0 0 50px var(--primary-color),
-                0 0 50px var(--primary-color),
-                0 0 50px var(--primary-color),
-                0 0 50px var(--primary-color),
-                0 0 50px var(--primary-color),
-                0 0 50px var(--primary-color),
-                0 0 50px var(--primary-color),
-                0 0 50px var(--primary-color),
-                0 0 50px var(--primary-color),
-                0 0 50px var(--primary-color);
-              background-color: var(--primary-color);
+              background-image: radial-gradient(
+                var(--primary-color),
+                rgb(222, 43, 252, 0.4),
+                transparent,
+                transparent
+              );
             }
           }
         }
@@ -130,8 +123,7 @@
                 background-color: var(--secondary-color);
               }
               box-shadow: 0 0 15px var(--secondary-color),
-                0 0 15px var(--secondary-color),
-                0 0 15px var(--secondary-color);
+                0 0 15px var(--secondary-color), 0 0 15px var(--secondary-color);
             }
           }
           .img-container {
@@ -139,18 +131,12 @@
               border: 1px solid var(--secondary-color);
             }
             &::after {
-              box-shadow: 0 0 50px var(--secondary-color),
-                0 0 50px var(--secondary-color),
-                0 0 50px var(--secondary-color),
-                0 0 50px var(--secondary-color),
-                0 0 50px var(--secondary-color),
-                0 0 50px var(--secondary-color),
-                0 0 50px var(--secondary-color),
-                0 0 50px var(--secondary-color),
-                0 0 50px var(--secondary-color),
-                0 0 50px var(--secondary-color),
-                0 0 50px var(--secondary-color);
-              background-color: var(--secondary-color);
+              background-image: radial-gradient(
+                var(--secondary-color),
+                rgb(0, 219, 222, 0.4),
+                transparent,
+                transparent
+              );
             }
           }
         }
@@ -168,23 +154,25 @@
           img {
             object-fit: cover;
             margin-top: auto;
-            padding: 1px;
-            padding-top: 0;
+            // padding: 1px;
+            // padding-top: 0;
+            padding: 0 2.5%;
+            padding-bottom: 1px;
           }
           &::before {
-            width: 99%;
+            width: 95%;
             height: 75%;
             content: "";
             position: absolute;
             bottom: 0;
           }
           &::after {
-            width: 30px;
-            height: 30px;
+            width: 90%;
+            height: 70%;
             content: "";
             position: absolute;
             z-index: -1;
-            bottom: 32.5%;
+            bottom: 0;
           }
         }
         h3 {
@@ -227,9 +215,6 @@
             position: absolute;
           }
           &.socials {
-            // height: 30px;
-            // width: 30px;
-            // bottom: 8%;
             &.insta {
               left: 32%;
             }
@@ -271,7 +256,7 @@
             height: 35%;
           }
           h3 {
-            font-size: 0.8rem;
+            font-size: 0.7rem;
             height: 20px;
             width: 70%;
             border-radius: 5px;
