--- a/styles/pages/v3/_home.scss
+++ b/styles/pages/v3/_home.scss
@@ -1,5 +1,6 @@
 #home {
   width: 100%;
+  padding-top: var(--header-height);
   background-color: var(--accent-color);
   display: flex;
   align-items: center;
